# programming-lab

./: .gitignore  LICENSE  README.md
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/: .gitignore  conftest.py  db.sqlite3  package.json  playwright.config.ts  pyproject.toml  pytest.ini
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/apps/chat/: apps.py  urls.py  views.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/apps/clientes/: admin.py  apps.py  serializers.py  signals.py  urls.py  urls_config.py  views.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/apps/core/: views.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/apps/documents/: apps.py  tasks.py  urls.py  views.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/apps/users/: admin.py  serializers.py  urls.py  views.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/apps/whatsapp/: agent.py  apps.py  google_credentials.py  urls.py  views.py  wrapper_evolutionapi.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/config/: urls.py  wsgi.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/config/settings/: __init__.py  base.py  local.py
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/templates/: base.html  base_auth.html
artificial-intelligence/formations/Pythonando Bootcamp/Sistema/jury_ai/templates/core/: analise_jurisprudencia.html  cadastro.html  chat.html  (+7 more)
(+840 files in other folders)
