[project]
name = "algoritmos_geneticos"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Lucas Biason", email = "biasonlucky@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
